--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
-/* You can add global styles to this file, and also import other style files */
+
+@import "~bootstrap/dist/css/bootstrap.css";
+/* في ملف CSS */
+@import '~bootstrap-icons/font/bootstrap-icons.css';
+@import'~font-awesome/css/font-awesome.min.css';
+
+body{
+       background-color: rgba(0, 0, 0, 0.852);
+       color: blue;
+}
